# property-django-next

./: .gitignore  README.md
backend/: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/core/: settings.py  urls.py
backend/properties/: admin.py  models.py  views.py
backend/properties/management/commands/: seed_properties.py
backend/properties/migrations/: 0001_initial.py  0002_remove_property_size.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/properties/[id]/: page.tsx
frontend/src/components/custom/: PropertyCard.tsx  PropertyDetail.tsx  PropertyFilters.tsx  PropertyForm.tsx  PropertyList.tsx
frontend/src/components/pages/: PropertiesPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: property.ts
